Update of Export, Import & Document SFMC Roles article + its cross-linking

--- a/docs/config/sfmc-config-permissions.mdx
+++ b/docs/config/sfmc-config-permissions.mdx
@@ -51,6 +51,19 @@ Such mixes are happening in multiple parts of Marketing Cloud and might change f
 
 However, Standard Roles not always align perfectly with your needs. The widespread use case would be hiding shared folders via permissions or blocking deletion rights for some users. It is where custom work is needed.
 
+
+:::note You Should Know
+
+If you want to quickly:
+
+- clone permissions of a standard role,
+- move a tested and proven role between SFMC accounts or
+- document your custom solution
+
+You can do it easily with a [ready-to-use JavaScript snippet](../js/js-snippet-export-import-document-sfmc-roles.mdx).
+
+:::
+
 ### Permission Overlap
 
 When working with multiple roles or overlapping permissions, be sure to check what is the outcome on the user.
