--- a/docs/js/js-dom.mdx
+++ b/docs/js/js-dom.mdx
@@ -474,3 +474,4 @@ Document Object Model can be used to adapt your website in real-time, fill in hi
 ## Marketing Cloud Use Cases
 
 1. [Tailor with Data](../usecase/tailor-with-data.mdx) - leverage DOM manipulation and personalisation strings to create dynamic experiences for your customers.
+2. [Export, Import & Document SFMC Roles](./js-snippet-export-import-document-sfmc-roles.mdx) - Backup, clone and move cross-account the Salesforce Marketing Cloud roles. In seconds, thanks to DOM.
