--- a/docs/js/js-snippet-export-import-document-sfmc-roles.mdx
+++ b/docs/js/js-snippet-export-import-document-sfmc-roles.mdx
@@ -2,24 +2,24 @@
 id: js-snippet-export-import-document-sfmc-roles
 title: Export, Import & Document SFMC Roles
 sidebar_label: Export, Import & Document SFMC Roles
-description: Backup, clone and move cross-account the Salesforce Marketing Cloud roles. In seconds.
+description: Backup, clone, and move cross-account the Salesforce Marketing Cloud roles. In seconds.
 image: img/og/og-image-js-export-import-document-sfmc-roles.png
 tags: [JavaScript, Marketing Cloud, Configuration, Users, Setup]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content="Backup, clone and move cross-account the Salesforce Marketing Cloud roles. In seconds." />
+<LeadText content="Backup, clone, and move cross-account the Salesforce Marketing Cloud roles. In seconds." />
 
-While you do get a set of standard user Roles in Salesforce Marketing Cloud, those are rarely enough. They are rather the base, on which you can create your custom tailored solutions that align with your business architecture.
+While you get a set of standard user Roles in Salesforce Marketing Cloud, those are rarely enough. Instead, they are the base on which you can create custom-tailored solutions that align with your business architecture.
 
-On top of that, standard Roles are silently changing from release to release as permissions come and go, so keeping track on them is crucial to have a clear picture of what your users can do.
+On top of that, standard Roles are silently changing from release to release as permissions come and go, so keeping track of them is crucial to have a clear picture of what your users can do.
 
 Marketing Cloud doesn't make it easy. There is no option to clone existing Roles to serve as a starting point for a new custom one. There is no option to export and import them between SFMC accounts. There is no option to create good documentation on them (unless you have a kink for super long print screens).
 
 Here comes JavaScript and [Document Object Model (DOM)](./js-dom.mdx) to unlock all those scenarios.
 
-Fear not - you don't have to be developer to leverage it. I will describe everything step-by-step and share ready-to-use snippets with you. Let's dive in.
+Fear not - you don't have to be a developer to leverage it. I will describe everything step-by-step and share ready-to-use snippets with you. Let's dive in.
 
 :::note You Should Know
 
@@ -27,7 +27,7 @@ If you want to learn more about:
 
 - standard vs custom roles,
 - permission overlap logic,
-- meaning behind their sometimes very cryptic names
+- the meaning behind their sometimes very cryptic names
 
 Check out my [article on SFMC Permissions](../config/sfmc-config-permissions.mdx).
 
@@ -39,28 +39,28 @@ To start using those SFMC Role-related, [DOM](./js-dom.mdx)-fueled solutions:
 
 1. Go to Marketing Cloud Setup » Users » Roles.
 2. Click on the name of the Role you want to work with.
-3. Click `expand all` Button to see whole permission tree for the Role.
+3. Click the `expand all` Button to see the whole permission tree for the Role.
 4. Right-click any permission name within that tree and select `Inspect Element`.
-5. This will open a Developer Console in a new part of your Browser. Select Console tab.
-6. [Optional] Click trash icon that will be visible in top left or right of the Console (depending on the browser you use) to clean up the working space.
+5. This will open a Developer Console in a new part of your browser. Select the Console tab.
+6. [Optional] Click the trash icon visible in the top left or right of the Console (depending on the browser you use) to clean up the working space.
 7. You are ready for the fun!
 
 :::note You Should Know
 
-If any of the solutions described later in this article doesn't work, try:
+If any of the solutions described later in this article doesn't work:
 
-1. Inspecting one of the permission names again (either with right click or using the aim icon visible in top left side of the Console).
+1. Inspect one of the permission names again (either with a right-click or using the aim icon visible on the top left side of the Console).
 2. If above didn't help, refresh the page and go through the steps once more.
 
 :::
 
 ## Export & Import SFMC Roles
 
-Export and import solution is super useful when you want to either clone existing Role and make some changes on it or when you have your perfect custom Role already tried and tested and want to move it to yet another Salesforce Marketing Cloud Account.
+The export and import solution is super helpful when you want to either clone an existing Role and make some changes or move your perfect, tried and tested custom Role to yet another Salesforce Marketing Cloud Account.
 
-It will require two step approach.
+It will require a two-step approach.
 
-### Exporting a SFMC Role
+### Exporting an SFMC Role
 
 [Access the Console](#where-the-magic-happens) and paste the below code:
 
@@ -74,9 +74,9 @@ console.log(JSON.stringify(permissionsExport));
 
 Click enter to run it.
 
-It will [loop](./js-loops.mdx) through all the checkboxes that you can see next to the permissions, save them in a single JavaScript object and output to the Console. Yeah, it looks awful, but that's all you need - list of checkboxes along with their status.
+It will [loop](./js-loops.mdx) through all the checkboxes that you can see next to the permissions, save them in a single JavaScript object and output them to the Console. Yeah, it looks awful, but that's all you need - list of checkboxes along with their status.
 
-Save this long text in it's entirety (either by highlighting and copy-pasting or by right clicking in empty space within the Console row and clicking `Copy Selected`). It should start with `{` and end with `}`.
+Save this long text (either by highlighting and copy-pasting or by right-clicking in an empty space within the Console row and clicking `Copy Selected`). It should start with `{` and end with `}`.
 
 ### Importing a SFMC Role
 
@@ -93,15 +93,15 @@ for (const [permissionId, permissionStatus] of Object.entries(permissionsImport)
 
 Change the `{}` in the first line with the export text you saved and click enter to run it.
 
-It will [loop](./js-loops.mdx) through all the saved checkboxes and update their state to the one from your export. Keep in mind, if there are some new checkboxes that don't exist in the export (for example, your export was done before Marketing Cloud Release that added some new permissions), those new ones will stay unchanged.
+It will [loop](./js-loops.mdx) through all the saved checkboxes and update their state to the one from your export. If some new checkboxes don't exist in the export (for example, you did your export before Marketing Cloud Release that added some new permissions), those new ones will stay unchanged.
 
 That's it. You cloned a Role.
 
-Now, as you could see, the export text was not really readable. So if you don't want to clone a Role, but rather  create a documentation for it, there is yet another script that is just as easy to use.
+Now, as you can see, the export text was not readable. If you don't want to clone a Role but rather create documentation for it, there is yet another script that is just as easy to use.
 
 ## Document SFMC Roles
 
-Documenting Roles and Permissions is not easy. You cannot just copy-paste what you see, the HTML is a mess, and the indented names are not unique. Sure, you can print screen it, but that's a lot of checkboxes and images aren't accessible. There must be a better way.
+Documenting Roles and Permissions is not easy. You cannot just copy-paste what you see, the HTML is a mess, and the indented names are not unique. Sure, you can print screen it, but that's a lot of checkboxes. And such images aren't accessible documentation. There must be a better way.
 
 And there is, so [access the Console](#where-the-magic-happens) and paste the below code:
 
@@ -144,11 +144,11 @@ It will [loop](./js-loops.mdx) through all the checkboxes that you can see next 
 
 - Save the permission name (for example, `View All Contacts`).
 - Prefix it with all the parent permissions to get a full path (for example, `Contacts - Contact Builder - View All Contacts`).
-- Capture state of Allow and Deny (as a boolean).
+- Capture the state of Allow and Deny (as a boolean).
 - Output it to the Console as a single long text with Headers and delimiter of your choice.
 
-Default delimiter is tab (`\t`) because it allows you to copy-paste the outcome from Console to a spreadsheet and have it automatically populate the columns. However, you are free to change it in the `delimiter` variable to anything else, like comma (`,`) or pipe (`|`), depending on your needs.
+The default delimiter is a tab (`\t`) because it allows you to copy-paste the outcome from Console to a spreadsheet and have it automatically populate the columns. However, depending on your needs, you can change the `delimiter` variable to something else, like a comma (`,`)  or pipe (`|`).
 
-Save this long text in it's entirety (either by highlighting and copy-pasting or by right clicking in empty space within the Console row and clicking `Copy Selected`) - I recommend pushing it stright to a spreadsheet to leverage the autoformatting and filtering capabilities.
+Save this long text in its entirety (either by highlighting and copy-pasting or by right-clicking in empty space within the Console row and clicking `Copy Selected`) - I recommend pushing it straight to a spreadsheet to leverage the autoformatting and filtering capabilities.
 
-Add the Name of the Role along with its purpose stored in Description field and that's it. You are good to go.
+Add the Name of the Role and its purpose stored in the Description field, and that's it. You are good to go.
