--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -27,7 +27,7 @@ Another important point related to Data Views is always knowing which Data View 
 
 Below you can find selected Salesforce Marketing Cloud Data Views focused on Subscribers and Email Channel. I plan to cover the rest of them in the future.
 
-Be sure to check the excellent [Data Views relationship diagram](https://sfmarketingcloudhome.files.wordpress.com/2021/02/dataviews_2021_v2.png) created by [Zuzanna Jarczyńska](https://sfmarketing.cloud). It will for sure help you with multi-view [`JOIN`s](../sql/sfmc-sql-join.mdx).
+Be sure to check the excellent [Data Views relationship diagram](https://sfmarketingcloudhome.files.wordpress.com/2021/02/dataviews_2021_v2.png) created by [Zuzanna Jarczyńska](https://sfmarketing.cloud) or a bit more complex, but more in-depth [System Tables relationship diagram](https://dbdiagram.io/d/5ff259ed80d742080a34e3c3) created by [Cameron Roberts](https://cameronrobert.com.au). Those will for sure help you with multi-view [`JOIN`s](../sql/sfmc-sql-join.mdx).
 
 Another must have is awesome [System Data Views Database Schema](https://github.com/samteezy/sfmc_schema) made by [Sam Tylor](https://www.linkedin.com/in/samgtaylor). Ton of info about specific value lengths and ready-to-use snippets to prepare whole database structure for backup. Perfect match for [MarketingThibs' System Data Views SSJS Cloning](https://github.com/MarketingThibs/sfmc-data-views).
 
@@ -1252,6 +1252,8 @@ ShortCode | The short code or long code used to send your message | Text | X |
 SharedKeyword | The keyword used in your message | Text | X |
 Ordinal | Represents the parts in a multi-part message. Represented in ascending order starting at 0. | Number | X |
 FromName | From Name that an individual message was deployed with. Maximum length: 11 characters | Text | X |
+JBDefinitionID | Unique identifier for the related journey | Text | X |
+JBActivityID | Unique identifier for the related journey activity | Text | X |
 
 </TabItem>
 <TabItem value='sql'>
@@ -1299,6 +1301,8 @@ SELECT
     , smsTracking.SharedKeyword
     , smsTracking.Ordinal
     , smsTracking.FromName
+    , smsTracking.JBDefinitionID
+    , smsTracking.JBActivityID
 FROM _SMSMessageTracking AS smsTracking
 ```
 
@@ -1318,7 +1322,7 @@ When working with `_SMSMessageTracking` Data View:
     - `SendSplitID`, `SendSegmentID`, `SendGroupID`, `SendPersonID` are populated only when SMS is sent to Data Extension as Audience.
     - `ConversationID` is populated only when a conversation is created with a MO user using AMPScript [`CreateSMSConversation`](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-programmatic-content.meta/mc-programmatic-content/CreateSmsConversation.htm).
 7. `Unsub`, `OptIn`, `OptOut` are currently not populated at all. You should pull that data from [`_SMSSubscriptionLog`](#_smssubscriptionlog).
-8. `Name` field is perfect for connecting SMS data with [`_JourneyActivity`](#_journeyactivity) Data View to have a complete picture of your Journey ([`JOIN`](../sql/sfmc-sql-join.mdx) `ON _SMSMessageTracking.Name = _JourneyActivity.ActivityName`).
+8. There are new fields, `JBDefinitionID` and `JBActivityID`, that let you cleanly match SMS data to [`Journey`](#_journey) and [`_JourneyActivity`](#_journeyactivity) Data Views using `VersionID` and `ActivityID` respectively. No longer you are limited to a fuzzy [`JOIN`](../sql/sfmc-sql-join.mdx) using `Name` field.
 9. `SMSStandardStatusCodeId` and `Description` are great for understanding your SMS send's current status.
 
 #### SMS Status Codes
@@ -1439,7 +1443,8 @@ FROM _JourneyActivity AS journeyActivity
 When working with `_JourneyActivity` Data View:
 
 1. There are two key fields here: `VersionID` and `JourneyActivityObjectID`. `JourneyActivityObjectID` lets you match Journey Activity with specific Email Send. Use `TriggererSendDefinitionObjectID` available on either [`_Job`](#_job), [`_Sent`](#_sent), [`_Open`](#_open), [`_Click` ](#_click) or [`_Bounce`](#_bounce) Data View. It is handy when you later use the `VersionID` field to [`JOIN`](../sql/sfmc-sql-join.mdx) [`_Journey`](#_journey) Data View and with this connect specific Email engagement with particular Journey and its exact version. Fantastic for full scope reporting.
-2. With the help of [`_Journey`](#_journey) Data View, you can use the `ActivityType` field for an excellent little report created with SQL that will show which Journeys use which channels and what types of logic. For a more in-depth understanding of what happens in Journey, you need to use Script Activity with REST API instead, but SQL is perfect for glancing at the multi-channel use.
+2. You can also connect it to SMS channel using [_SMSMessageTracking](#_smsmessagetracking) Data View by making a [`JOIN`](../sql/sfmc-sql-join.mdx) `ON journeyActivity.ActivityID = smsTracking.JBActivityID`.
+3. With the help of [`_Journey`](#_journey) Data View, you can use the `ActivityType` field for an excellent little report created with SQL that will show which Journeys use which channels and what types of logic. For a more in-depth understanding of what happens in Journey, you need to use Script Activity with REST API instead, but SQL is perfect for glancing at the multi-channel use.
 
 ---
 
@@ -1489,8 +1494,9 @@ FROM _Journey AS journey
 When working with `_Journey` Data View:
 
 1. `VersionID` field is perfect to [`JOIN`](../sql/sfmc-sql-join.mdx) with [`_JourneyActivity`](#_journeyactivity). It lets you map multi-channel engagement to a particular Journey (visible in `JourneyName`) and its specific version (as shown in `VersionNumber`).
-2. Use `JourneyStatus` to check what is the current Journey Status. It is fantastic for both the [`WHERE`](../sql/sfmc-sql-where.mdx) statement and a data point for engagement analysis. Think about scheduled Automation that finds all emails performing below expectations and checks which are in the Active Journeys. For all found, it sends you a notification to check and improve. For awful results, you can even use this data in Script Activity to automatically stop the Journey with the SFMC REST API.
-3. The Date fields (`CreatedDate`, `LastPublishedDate`, `ModifiedDate`) are cool for automated cleanup of old Journeys, especially when paired with the [`_Sent`](#_sent) data. For example, you can create monthly Automation that checks all Journeys that were last modified at least three months ago and, based on the send volume or performance, stop them and notify you about that.
+2. You can also connect it to SMS channel using [_SMSMessageTracking](#_smsmessagetracking) Data View by making a [`JOIN`](../sql/sfmc-sql-join.mdx) `ON journey.VersionID = smsTracking.JBDefinitionID`.
+3. Use `JourneyStatus` to check what is the current Journey Status. It is fantastic for both the [`WHERE`](../sql/sfmc-sql-where.mdx) statement and a data point for engagement analysis. Think about scheduled Automation that finds all emails performing below expectations and checks which are in the Active Journeys. For all found, it sends you a notification to check and improve. For awful results, you can even use this data in Script Activity to automatically stop the Journey with the SFMC REST API.
+4. The Date fields (`CreatedDate`, `LastPublishedDate`, `ModifiedDate`) are cool for automated cleanup of old Journeys, especially when paired with the [`_Sent`](#_sent) data. For example, you can create monthly Automation that checks all Journeys that were last modified at least three months ago and, based on the send volume or performance, stop them and notify you about that.
 
 ---
 
