Small updates to licence page

--- a/sites/licence.mdx
+++ b/sites/licence.mdx
@@ -12,11 +12,10 @@ import { LeadText } from '../src/components/LeadText.js';
 
 All writing, graphics and other content on the site is my original content (unless stated otherwise), and I license it under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International [CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc/4.0/). If you are looking at the repository, almost everything in the [docs](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/docs), [sites](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/sites) and [pages](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/src/pages) is [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) and available for re-use with attribution:
 
-
 > "Article Title" ― [Mateusz Dąbrowski](https://mateuszdabrowski.pl/) ― [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/)
 
 ```html title="Attribution Snippet"
-"Article Title" &mdash;
+<a href="https://mateuszdabrowski.pl/link-to-article/">"Article Title"</a> &mdash;
 <a href="https://mateuszdabrowski.pl/">Mateusz Dąbrowski</a> &mdash;
 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>
 ```
@@ -25,9 +24,9 @@ All writing, graphics and other content on the site is my original content (unle
 
 Site design and its source code are adapted by me and available under the [MIT license](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/docs/LICENSE) and are openly available for re-use on [GitHub](https://github.com/MateuszDabrowski/mateuszdabrowski.pl)
 
-
 ## Attribution
 
 - Logo is done by [Marek Jagusiak](https://jagusiak.eu)
 - Three graphics on main page are from [Undraw](https://undraw.co)
 - Website is built with [Docusaurus 2](https://v2.docusaurus.io)
+- Search is powered by [Algolia](https://www.algolia.com)
