Linked to forked and updated SFMC Data Views SQL Schema

--- a/docs/config/sfmc-config-system-data-views.mdx
+++ b/docs/config/sfmc-config-system-data-views.mdx
@@ -29,7 +29,7 @@ Below you can find selected Salesforce Marketing Cloud Data Views focused on Sub
 
 Be sure to check the excellent [Data Views relationship diagram](https://sfmarketingcloudhome.files.wordpress.com/2021/02/dataviews_2021_v2.png) created by [Zuzanna Jarczyńska](https://sfmarketing.cloud) or a bit more complex, but more in-depth [System Tables relationship diagram](https://dbdiagram.io/d/5ff259ed80d742080a34e3c3) created by [Cameron Roberts](https://cameronrobert.com.au). Those will for sure help you with multi-view [`JOIN`s](../sql/sfmc-sql-join.mdx).
 
-Another useful link is [System Data Views SQL Schema](https://github.com/MateuszDabrowski/sfmc-data-views-sql-schema) I forked from [Sam Tylor](https://www.linkedin.com/in/samgtaylor). Ton of info about specific value lengths and ready-to-use snippets to prepare whole database structure for backup. Perfect match for [MarketingThibs' System Data Views SSJS Cloning](https://github.com/MarketingThibs/sfmc-data-views).
+Another useful link is [System Data Views SQL Schema](https://github.com/MateuszDabrowski/sfmc-data-views-sql-schema) forked and updated from [Sam Tylor](https://www.linkedin.com/in/samgtaylor). Ton of info about specific value lengths and ready-to-use snippets to prepare whole database structure for backup. Perfect match for [MarketingThibs' System Data Views SSJS Cloning](https://github.com/MarketingThibs/sfmc-data-views).
 
 :::
 
