First draft of SFMC SQL NULL functions article

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -85,6 +85,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [Numeric Functions](./sql/sfmc-sql-numeric-functions.mdx)
 - [Conversion Functions](./sql/sfmc-sql-conversion-functions.mdx)
 - [Aggregate Functions](./sql/sfmc-sql-aggregate-functions.mdx)
+- [NULL Functions](./sql/sfmc-sql-null-functions.mdx)
 - [Style Guide](./sql/sfmc-sql-style-guide.mdx)
 
 ### SQL Snippets
